# waiwai-backend

./: .dockerignore  .env.dev  .env.sample  .gitignore  Dockerfile  Dockerfile.migration  README.md  RELEASE.md  RELEASE_SETUP.md  TODO.md  alembic.ini  backup_public.sh  database.dbml  docker-compose-db.yml  docker-compose.sample.yml  docker-entrypoint.sh  entrypoint.sh  pyproject.toml  waiwai-backend.service
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  CHORE.md  DOCUMENTATION.md  FEATURE_REQUEST.md  IMPROVEMENT.md  PERFORMANCE.md  SECURITY.md  TEST.md
backend/: app.py  utils.py  waiwai.py
backend/auth/: __init__.py  auth.py  auth_handler.py
backend/configs/: __init__.py  config.py  database.py
backend/models/: __init__.py  attachment.py  base.py  category.py  meaning.py  reference.py  user.py  version.py  word.py  word_review.py
backend/repositories/: __init__.py  attachments.py  base.py  categories.py  meanings.py  references.py  users.py  version.py  words.py
backend/routers/: __init__.py  attachments.py  auth.py  base.py  categories.py  me.py  meanings.py  references.py  root.py  users.py  wordattachments.py  wordcategory.py  wordmeanings.py  words.py  worduploads.py
backend/schemas/: __init__.py  attachment.py  base.py  category.py  meaning.py  params.py  references.py  token.py  user.py  version.py  word.py  word_review.py
database/: .gitignore  Dockerfile  backup_db.sh  dados.csv  importa_dados.sql  postgresql.conf
migrations/: README  env.py
migrations/versions/: 0b1a91fc76b6_add_word_status_and_reviews.py  1fbcebb1a612_create_users_table.py  2f7eaa9ffc0d_feat_usuarios_com_anexos.py  3c94eb4eb3eb_feat_relationship_usercategory.py  4189f5130060_feat_creating_database.py  63f5ae0f7c4a_feat_tamanho_de_colunas_em_significados_.py  6d025966078b_word_length_updated.py  6d3db3012263_feat_tamanho_de_colunas_em_referências.py  7dd37ed381de_updating_column_name.py  83e7458f9606_feat_campo_de_fonema_em_words.py  887e6aa99b0e_feat_creating_database.py  88cc2ed900c4_feat_initial_commit.py  a92dcd43fdb7_fix_categoryuser_relationship.py  af02759a9796_fix_reference_coluna_opcional.py  b3c02bb93acb_feat_creating_database.py  b88c58faece2_feat_tipo_de_arquivo_do_anexo.py  c0e7b966dfa7_meaning_column_updated.py  cacf366d3002_add_timestamps_to_users.py  e799f5ce2314_feat_tamanho_da_coluna_de_referência.py  eaca3cd7ab60_columns_length_updated.py  f14c46605c00_feat_relação_de_usuários_com_significado.py  f96a338c6f3a_feat_creating_database.py  fb4331e72d63_feat_campos_na_tabela_de_anexos.py  fcbf42f4310f_fix_name_to_full_name.py  (+1 more)
nginx/: Dockerfile  nginx.conf
tests/: conftest.py  test_app.py  test_db.py
